# testovoe

./: .gitignore  README.md  cbrf.py  config.py  db.py  docker-compose.yml  google_sheets.py  main.py  models.py  nginx.conf  pyproject.toml  tg.py  web.py
core/: Dockerfile  config.py  db.py  main.py  models.py  pyproject.toml  tg.py  web.py
webui/: Dockerfile  package-lock.json  package.json
webui/src/: App.css  App.js  Chart.js  Orders.js  Total.js
