[tool.poetry]
name = "test"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
oauth2client = "^4.1.3"
google-api-python-client = "^2.51.0"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
bpython = "^0.22.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
